<resources>
    <string name="app_name">DatingApp</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">705055173204260</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb705055173204260</string>
    <!-- Google Sign-In -->
    <string name="default_google_oauth_web_client_id">271847460761-uf0e49frb5vqarpbvpiu1njccruprn1e.apps.googleusercontent.com</string>

    <!--Status-->
    <string name="loading">Loading…</string>

    <!--Login Activity-->
    <string name="login_activity_email_label">Email</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_first_name_label">First</string>
    <string name="login_activity_last_name_label">Last</string>
    <string name="login_activity_register_label">Register</string>
    <string name="login_activity_sign_in_label">Sign In</string>
    <string name="login_activity_sign_out_label">Sign Out</string>

    <string name="login_activity_status_auth_failed">Authentication failed</string>
    <string name="login_activity_status_signed_in">Signed In</string>
    <string name="login_activity_status_signed_out">Signed Out</string>

    <string name="emailpassword_status_format">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_format">Firebase User: %s</string>

    <!--Search Activity-->
    <string name="search_activities_search_hint">Search users...</string>

    <!--Profile Activity-->
    <string name="profile_chat_label">Chat</string>

</resources>
