<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/text_view_login_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_email_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />
    <EditText
        android:id="@+id/edit_text_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_email_label" />

    <TextView
        android:id="@+id/text_view_login_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_email"
        android:text="@string/login_activity_password_label" />
    <EditText
        android:id="@+id/edit_text_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        app:layout_constraintTop_toBottomOf="@+id/text_view_login_password_label" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_login_register_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_password"
        android:visibility="gone">
        <TextView
            android:id="@+id/text_view_login_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_first_name_label" />
        <EditText
            android:id="@+id/edit_text_login_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_first_name_label"/>

        <TextView
            android:id="@+id/text_view_login_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_last_name_label"
            app:layout_constraintStart_toStartOf="@id/edit_text_login_last_name" />
        <EditText
            android:id="@+id/edit_text_login_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_last_name_label"/>
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/text_view_login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_login_register_fields"/>

    <TextView
        android:id="@+id/text_view_login_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_status"/>

    <Button
        android:id="@+id/button_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_details" />

    <Button
        android:id="@+id/button_login_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/login_activity_register_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_email" />

    <View
        android:id="@+id/divider_login"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/button_login_email_register"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_login"
        android:layout_marginTop="8dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_google_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_facebook_login"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        tools:visibility="gone" />

</android.support.constraint.ConstraintLayout>